# WalletS

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
fastapi-application/: .env.template  alembic.ini  main.py
fastapi-application/alembic/versions/: 2025_02_15_2329-c3e8f5b47fdc_add_user_table.py  2025_02_16_0053-5792ccf179fb_create_access_tokens_table.py  2025_02_16_2020-c0b13aca4fcc_fix_accesstoken_id_column.py  2025_02_17_1659-bfb8b33a1ff5_create_account_invoice_and_transaction_.py  2025_02_17_1726-98ddf1d3c802_add_account_name_and_number.py  2025_02_17_1824-4ef56832e611_make_account_name_unique.py  2025_02_17_1917-ef2ec96cd7cc_add_invoice_category.py  2025_02_18_0000-c43a69e52805_add_receiver_account_field.py  2025_02_18_1611-c9c070dd1266_remove_account_name_uniqueness.py
fastapi-application/api/: __init__.py
fastapi-application/api/dependencies/auth/: access_tokens.py  backend.py  fastapi_users.py  strategy.py  user_manager.py  users.py
fastapi-application/api/schemas/: accounts.py  invoices.py  transactions.py  users.py
fastapi-application/api/v1/: __init__.py  accounts.py  auth.py  fastapi_users.py  invoices.py  transactions.py  users.py
fastapi-application/core/: config.py
fastapi-application/core/auth/: user_manager.py
fastapi-application/core/models/: __init__.py  access_token.py  account.py  base.py  db_helper.py  invoice.py  transaction.py  user.py
fastapi-application/utils/: account_helper.py  case_converter.py  invoice_helper.py  transaction_helper.py
